--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 
 
 /*---------------------------------------
-    Typorgraphy              
+    Typorgraphy
 -----------------------------------------*/
 h1,h2,h3,h4,h5,h6 {
   font-weight: 600;
@@ -26,7 +26,7 @@ h3,h5 {
 }
 
 h1 {
-    font-size: 40px;
+    font-size: 60px;
     letter-spacing: 2px;
 }
 
@@ -57,7 +57,7 @@ a {
 
 
 /*---------------------------------------
-    General               
+    General
 -----------------------------------------*/
 .section-title {
   margin-bottom: 32px;
@@ -70,9 +70,9 @@ a {
 }
 
 #detail, #video,
-#speakers, 
+#speakers,
 #program,
-#sponsors, 
+#sponsors,
 #contact, footer {
     padding-top: 10rem;
     padding-bottom: 10rem;
@@ -142,7 +142,7 @@ footer {
 
 
 /*---------------------------------------
-    Preloader section              
+    Preloader section
 -----------------------------------------*/
 .preloader {
   position: fixed;
@@ -190,7 +190,7 @@ footer {
 
 
 /*---------------------------------------
-    Navigation Links section              
+    Navigation Links section
 -----------------------------------------*/
 .custom-navbar {
     margin-bottom: 0;
@@ -247,7 +247,7 @@ footer {
     .custom-navbar {
         padding: 20px 0;
         border-bottom: 0;
-        background: 0 0; 
+        background: 0 0;
     }
     .custom-navbar.top-nav-collapse {
         background: #101010;
@@ -259,10 +259,10 @@ footer {
 
 
 /*---------------------------------------
-    Intro section              
+    Intro section
 -----------------------------------------*/
 #intro {
-    background: url('../images/intro-bg.jpg') 50% 0 repeat-y fixed;
+    background: url('../images/intro-bg.png') 50% 0 repeat-y fixed;
     -webkit-background-size: cover;
     background-size: cover;
     background-position: center center;
@@ -286,7 +286,7 @@ footer {
 
 
 /*---------------------------------------
-   Overview  section              
+   Overview  section
 -----------------------------------------*/
 #overview img {
   position: relative;
@@ -296,7 +296,7 @@ footer {
 
 
 /*---------------------------------------
-    Detail section              
+    Detail section
 -----------------------------------------*/
 #detail {
     background: #222;
@@ -311,7 +311,7 @@ footer {
 
 
 /*---------------------------------------
-    Video section              
+    Video section
 -----------------------------------------*/
 #video iframe {
   border: none;
@@ -320,7 +320,7 @@ footer {
 
 
 /*---------------------------------------
-   Speakers section              
+   Speakers section
 -----------------------------------------*/
 #speakers {
     background: #f9f9f9;
@@ -358,7 +358,7 @@ footer {
 
 
 /*---------------------------------------
-   Program section              
+   Program section
 -----------------------------------------*/
 #program h4 {
     color: #808080;
@@ -417,7 +417,7 @@ footer {
 
 
 /*---------------------------------------
-    Regsiter section              
+    Regsiter section
 -----------------------------------------*/
 #register {
     background: url('../images/register-bg.jpg') 50% 0 repeat-y fixed;
@@ -458,7 +458,7 @@ footer {
 
 
 /*---------------------------------------
-   Faq section              
+   Faq section
 -----------------------------------------*/
 #faq {
   background: #f9f9f9;
@@ -523,7 +523,7 @@ footer {
 
 
 /*---------------------------------------
-   Venue section              
+   Venue section
 -----------------------------------------*/
 #venue {
     background: url('../images/venue-bg.jpg') 50% 0 repeat-y fixed;
@@ -541,7 +541,7 @@ footer {
 
 
 /*---------------------------------------
-   Sponsors section              
+   Sponsors section
 -----------------------------------------*/
 #sponsors img {
   margin-top: 18px;
@@ -550,7 +550,7 @@ footer {
 
 
 /*---------------------------------------
-   Contact section              
+   Contact section
 -----------------------------------------*/
 #contact {
     background: url('../images/contact-bg.jpg') 50% 0 repeat-y fixed;
@@ -604,7 +604,7 @@ footer {
 
 
 /*---------------------------------------
-   Footer section              
+   Footer section
 -----------------------------------------*/
 footer {
   background-attachment: fixed;
@@ -636,7 +636,7 @@ footer {
 
 
 /*---------------------------------------
-   Social icon             
+   Social icon
 -----------------------------------------*/
 .social-icon {
     position: relative;
@@ -670,7 +670,7 @@ footer {
 
 
 /*---------------------------------------
-   Responsive styles            
+   Responsive styles
 -----------------------------------------*/
 @media (max-width: 980px) {
 
@@ -735,4 +735,3 @@ footer {
   }
 
 }
-
