--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ New Event
 http://www.templatemo.com/tm-486-new-event
 
 */
-
+/*
 body {
 		background: #ffffff;
     font-family: 'Poppins', sans-serif;
@@ -735,3 +735,4 @@ footer {
   }
 
 }
+*/
