--- a/css/style.css
+++ b/css/style.css
@@ -187,28 +187,34 @@ footer {
 .custom-navbar {
     margin-bottom: 0;
     background-color: #101010;
+    transition: .2s;
 }
 
 .custom-navbar .navbar-brand {
     color: #ffffff;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 3rem;
-    line-height: 40px;
+    /* line-height: 40px; */
+    border: 3px solid #fff;
+}
+
+.custom-navbar .nav {
 }
 
 .custom-navbar .nav li a {
-    color: #ddd;
-    font-size: 12px;
-    font-weight: 500;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 300;
     letter-spacing: 0.6px;
     text-transform: uppercase;
     line-height: 40px;
-    transition: all 0.4s ease-in-out;
+    transition: all 0.2s ease-in-out;
 }
 
 .custom-navbar .nav li a:hover {
     background: transparent;
-    color: #66ccff;
+    color: #5bd4e4;
+    transform: translateY(-2px);
 }
 
 .custom-navbar .navbar-nav > li > a:hover,
@@ -241,20 +247,39 @@ footer {
         border-bottom: 0;
         background: 0 0; 
     }
+    .custom-navbar .navbar-brand {
+      transform: translate(100px, 30px);
+      transition: .2s;
+      margin-top:10px;
+    }
+    .custom-navbar .nav  {
+      transform: translate(-30px,30px);
+    }
+    .custom-navbar .nav li a {
+      margin-right: 20px;
+    }
     .custom-navbar.top-nav-collapse {
         background: #101010;
         padding: 0;
     }
+    .custom-navbar.top-nav-collapse .navbar-brand{
+      transform: translate(0, 0);
+    }
+    .custom-navbar.top-nav-collapse .nav {
+      transform: translate(0, 0);
+    }
+    .custom-navbar.top-nav-collapse .nav li a {
+      margin-right: 0;
+    }
 
 }
-
 
 
 /*---------------------------------------
     Intro section              
 -----------------------------------------*/
 #intro {
-    background: linear-gradient(to right,rgba(0,0,0,.4),rgba(0,0,0,.4)), url('../images/intro-bg1.jpeg') fixed;
+    background: linear-gradient(to right,rgba(0,0,0,.5),rgba(0,0,0,.5)), url('../images/intro-bg1.jpeg') fixed;
     -webkit-background-size: cover;
     background-size: cover;
     background-position: center center;
@@ -271,10 +296,35 @@ footer {
     text-align: center;
 }
 
-#intro h3 {
-  letter-spacing: 2px;
+#intro .container .row .fst {
+  letter-spacing: 5px;
+  font-size: 60px;
 }
 
+#intro .container .row .snd {
+  /* letter-spacing: 3px; */
+}
+
+#intro .container .row .thr {
+  letter-spacing: 25px;
+  font-size: 60px;
+}
+
+#intro .container .row .img-box {
+  height: 200px;
+  width: 150px;
+  display: inline-block;
+}
+
+#intro .container .row .img-box img {
+  width: 100%;
+  height: 100%;
+}
+
+#intro .container .row i {
+  display: block;
+  color: #fff;
+}
 
 
 /*---------------------------------------
@@ -316,6 +366,7 @@ footer {
 -----------------------------------------*/
 #speakers {
     background: #f9f9f9;
+    text-align: center;
 }
 
 #speakers h3 {
@@ -336,9 +387,10 @@ footer {
 
 #speakers .col-md-3 {
     display: block;
-    width: 30%;
+    width: 250px;
     padding-top: 30px;
     padding-bottom: 20px;
+    margin: 0 auto;
     margin-bottom: 22px;
 }
 
