--- a/css/style.css
+++ b/css/style.css
@@ -395,7 +395,7 @@ footer {
 
 #speakers .col-md-3 {
     display: block;
-    width: 100%;
+    width: 250px;
     padding-top: 30px;
     padding-bottom: 20px;
     margin: 0 auto;
