--- a/css/style.css
+++ b/css/style.css
@@ -459,7 +459,7 @@ footer {
 }
 
 #program img {
-  border-radius: 50%;
+  border-radius: 60%;
 }
 
 .nav-tabs {
@@ -909,7 +909,7 @@ footer {
   }
 
   #program img {
-    padding-bottom: 32px;
+  /*  padding-bottom: 32px;*/
   }
 
   #sponsors img {
