--- a/css/style.css
+++ b/css/style.css
@@ -810,6 +810,10 @@ footer {
     transition: .2s;
   }
 
+  .custom-navbar .navbar-toggler.active {
+    background-color: transparent;
+  }
+
   .custom-navbar .navbar-toggler.active .bar-1 {
     transform-origin: left;
     transform: rotate(43deg);
