--- a/css/style.css
+++ b/css/style.css
@@ -297,7 +297,7 @@ footer {
     Intro section
 -----------------------------------------*/
 #intro {
-    background: linear-gradient(to right,rgba(0,0,0,.5),rgba(0,0,0,.5)), url('../images/intro-bg1.jpeg') fixed;
+    background: linear-gradient(to right,rgba(0,0,0,.7),rgba(0,0,0,.7)), url('../images/intro-bg1.jpg') fixed;
     -webkit-background-size: cover;
     background-size: cover;
     background-position: center center;
@@ -813,7 +813,7 @@ footer {
   }
 
   .custom-navbar .navbar-toggler.active .bar-2 {
-    opacity: 0;
+    	: 0;
   }
 
   .custom-navbar .navbar-toggler.active .bar-3 {
